--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
 
     <section class="section-meals">
-        <ul class="meals-showcase">
+        <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
                     <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -100,7 +100,7 @@
 
 
         </ul>
-        <ul class="meals-showcase">
+        <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
                     <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
@@ -124,8 +124,136 @@
         </ul>
     </section>
 
+    <section class="section-steps">
+        <div class="row">
+            <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-2 steps-box">
+                <img src="resources/img/app-iPhone.png" alt="Omnifood app on iphone" class="app-screen">
+            </div>
+            <div class="col span-1-of-2 steps-box">
+                <div class="works-step">
+                    <div>1</div>
+                    <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+                </div>
+                <div class="works-step">
+                    <div>2</div>
+                    <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+                </div>
+                <div class="works-step">
+                    <div>3</div>
+                    <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+                </div>
+
+                <a href="#" class="btn-app">
+                    <img src="resources/img/download-app.svg" alt="App store button">
+                </a>
+                <a href="#" class="btn-app">
+                    <img src="resources/img/download-app-android.png" alt="Play store Buuton">
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-cities">
+        <div class="row">
+            <h2>We're currently in these cities</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-4 box">
+                <img src="resources/img/lisbon-3.jpg" alt="lisbon">
+                <h3>Lisbon</h3>
+
+                <div class="city-feature">
+                    <ion-icon name="people" class="icon-small"></ion-icon>
+                    1600+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <ion-icon name="star" class="icon-small"></ion-icon>
+                    60+ top chefs
+                </div>
+                <div class="city-feature">
+                    <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                    <a href="#">@omnifood_lx</a>
+                </div>
+
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="resources/img/san-francisco.jpg" alt="lisbon">
+                <h3>San Francisco</h3>
+
+                <div class="city-feature">
+                    <ion-icon name="people" class="icon-small"></ion-icon>
+                    3700+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <ion-icon name="star" class="icon-small"></ion-icon>
+                    160+ top chefs
+                </div>
+                <div class="city-feature">
+                    <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                    <a href="#">@omnifood_sf</a>
+                </div>
+
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="resources/img/berlin.jpg" alt="lisbon">
+                <h3>Berlin</h3>
+
+                <div class="city-feature">
+                    <ion-icon name="people" class="icon-small"></ion-icon>
+                    Berlin
+                </div>
+                <div class="city-feature">
+                    <ion-icon name="star" class="icon-small"></ion-icon>
+                    110+ top chefs
+                </div>
+                <div class="city-feature">
+                    <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                    <a href="#">@omnifood_berlin</a>
+                </div>
+
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="resources/img/london.jpg" alt="lisbon">
+                <h3>London</h3>
+
+                <div class="city-feature">
+                    <ion-icon name="people" class="icon-small"></ion-icon>
+                    1200+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <ion-icon name="star" class="icon-small"></ion-icon>
+                    50+ top chefs
+                </div>
+                <div class="city-feature">
+                    <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                    <a href="#">@omnifood_london</a>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
 
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-</body>
-
-</html>
+</body></html>
