--- a/index.html
+++ b/index.html
@@ -271,25 +271,25 @@
                 <div class="plan-box">
                     <div>
                         <h3>Premium</h3>
-                        <p class="plan-price">$399 / month</p>
+                        <p class="plan-price">$399 <span>/ month</span></p>
                         <p class="plan-price-meal">That’s only 13.30$ per meal</p>
                     </div>
                     <div>
                         <ul>
                             <li>
-                                <ion-icon name="checkmark-done-circle"></ion-icon>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
                                 1 meal every day
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle"></ion-icon>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
                                 Order 24/7
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle"></ion-icon>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
                                 Access to newest creations
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle"></ion-icon>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
                                 Free delivery
                             </li>
                         </ul>
@@ -299,10 +299,135 @@
                     </div>
                 </div>
             </div>
+            <div class="col span-1-of-3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Pro</h3>
+                        <p class="plan-price">149$ <span> per month</span></p>
+                        <p class="plan-price-meal">That’s only 14.90$ per meal</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                1 meal 10 days/month
+                            </li>
+                            <li>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                Order 24/7
+                            </li>
+                            <li>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                Access to newest creations
+                            </li>
+                            <li>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                Free delivery
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-ghost">Sign up now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col span-1-of-3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Starter</h3>
+                        <p class="plan-price">19$ <span> per meal</span></p>
+                        <p class="plan-price-meal">&nbsp;</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                1 meal every day
+                            </li>
+                            <li>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                Order from 8 am to 12 pm
+                            </li>
+                            <li>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                Access to newest creations
+                            </li>
+                            <li>
+                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                Free delivery
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-ghost">Sign up now</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-
+    <section class="section-form">
+        <div class="row">
+            <h2>We're happy to hear from you</h2>
+        </div>
+        <div class="row">
+            <form method="post" action="#" class="contact-form">
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="name">Name</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="text" name="name" id="name" placeholder="Your Name" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="email">Email</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="email" name="email" id="email" placeholder="Your Email" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="find-us">How did you find us!</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <select name="find-us" id="find-us">
+                            <option value="friends">Friends</option>
+                            <option value="search" selected>Search engine</option>
+                            <option value="ad">Advertisment</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="">Newsletter</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="checkbox" name="news" id="news" checked> Yes, please!
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="">Drop us a line</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <textarea name="message" placeholder="Your message"></textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="">&nbsp;</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="submit" value="send it!">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
 
 
 
@@ -319,6 +444,4 @@
 
 
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-</body>
-
-</html>
+</body></html>
