--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="vendors/css/Grid.css">
     <link rel="stylesheet" href="vendors/css/normalize.css">
     <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/queries.css">
 </head>
 
 <body>
@@ -428,20 +429,41 @@
             </form>
         </div>
     </section>
-
-
-
-
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-
-
+    <footer>
+        <div class="row">
+            <div class="col span-1-of-2">
+                <ul class="footer-nav">
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">IOS app</a></li>
+                    <li><a href="#">Android app</a></li>
+                </ul>
+            </div>
+            <div class="col span-1-of-2">
+                <ul class="socail-links">
+                    <li><a href="#">
+                            <ion-icon name="logo-facebook" class="social-icon"></ion-icon>
+                        </a></li>
+                    <li><a href="#">
+                            <ion-icon name="logo-twitter" class="social-icon"></ion-icon>
+                        </a></li>
+                    <li><a href="#">
+                            <ion-icon name="logo-google" class="social-icon"></ion-icon>
+                        </a></li>
+                    <li><a href="#">
+                            <ion-icon name="logo-instagram" class="social-icon"></ion-icon>
+                        </a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <p>
+                copyright&copy; 2015 Omnifood, All right reserved.
+            </p>
+        </div>
+    </footer>
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-</body></html>
+</body>
+
+</html>
