Ending Media Query

--- a/index.html
+++ b/index.html
@@ -278,19 +278,19 @@
                     <div>
                         <ul>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 1 meal every day
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 Order 24/7
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 Access to newest creations
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 Free delivery
                             </li>
                         </ul>
@@ -310,19 +310,19 @@
                     <div>
                         <ul>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 1 meal 10 days/month
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 Order 24/7
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 Access to newest creations
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 Free delivery
                             </li>
                         </ul>
@@ -342,19 +342,19 @@
                     <div>
                         <ul>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 1 meal every day
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 Order from 8 am to 12 pm
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 Access to newest creations
                             </li>
                             <li>
-                                <ion-icon name="checkmark-done-circle icon-small"></ion-icon>
+                                <ion-icon name="checkmark-done-circle" class="icon-small"></ion-icon>
                                 Free delivery
                             </li>
                         </ul>
@@ -465,5 +465,12 @@
     </footer>
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
+
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr.js"></script>
 
 </html>
